# cmdpal-tui

./: .gitignore  README.md  add_examples.py  pyproject.toml
cmdpal/: __main__.py  cli.py  config.py  models.py  storage.py  tui.py  utils.py
